--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="img-hero">
-            <img src="img/ro.png" alt="">
+            <img src="img/ro.png" alt="hjghj">
             <div class="rotate-text">
                 <div class="text">
                     <p>I'm REACTJS DEVELOPER  And I'm FULL STACK DEVELOPER And I'm MERN STACK DEVELOPER </p>
