--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
     <!-- mixitup cdn js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
     <script src="script.js"></script>
+    <script src="//code.tidio.co/pequs2ivbr4uxen4sgnigxoe7q4jqhrm.js" async></script>
 </body>
 </html>
 
