--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
                 <h3>Certified as Cyber Hygiene Practitioner</h3>
                 <p>Glad to inform that i have completed the requirements for the Cyber Hygiene Practices, by MeitY Govt. of India and got certified as Cyber Hygiene Practitioner💫Congratulations on earning the Cyber Hygiene Practitioner certification from MeitY, Government of India! It's a significant achievement in enhancing your understanding of cybersecurity practices</p>
-                <a href="#" class="readMore">Read More</a>
+                <a href="./CERTIFICATE/chp_112005_RAUSHANKUMAR_page-0001.jpg" class="readMore">Read More</a>
             </div>
 
             <div class="servicesItem">
