--- a/index.html
+++ b/index.html
@@ -412,14 +412,15 @@
                     <h2 class="heading">Contact Me</h2>
                     <span>get in touch with me</span>
                 </div>
-                <form action="#">
+                <form action="https://formspree.io/f/xpzvabev"
+                method="POST">
                     <div class="input-box">
-                        <input type="text" placeholder="First Name">
-                        <input type="text" placeholder="Last Name">
+                        <input type="text" placeholder="First Name" name="First Name">
+                        <input type="text" placeholder="Last Name" name="Last Name">
                     </div>
-                    <input type="email" placeholder="Email">
-                    <input type="text" placeholder="Subject">
-                    <textarea name="#" id="" cols="30" rows="10">
+                    <input type="email" placeholder="Email" name="Email">
+                    <input type="text" placeholder="Subject" name="Subject">
+                    <textarea name="content" id="" cols="30" rows="10">
                     </textarea>
                     <div class="formBtn">
                         <button type="submit" class="btn">Send Message</button>
